[package]
name = "nba_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
tui = { version = "0.17", features = ["crossterm"] }
crossterm = "0.22"
unicode-width = "0.1"
tui-textarea = { version = "*", features = ["search"] }
failure = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
